[package]
name = "resplay-gui"
version = "0.0.0"
edition = "2024"

[dependencies]
egui = "0.35"
eframe = { version = "0.35", default-features = false, features = ["persistence", "wayland", "glow"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
resplay-core = { path = "../resplay-core" }
rfd = "0.17"
bitflags = "2"
ringbuf = "0.5"
indexmap = { version = "2", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"
cpal = "0.18"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
cpal = { version = "0.18", features = ["wasm-bindgen"] }
